# easy-model-deployer

./: .gitignore  .pre-commit-config.yaml  CNAME  README.md  README_zh.md  extra_params_demo.json  index.html  mkdocs.base.yml  mkdocs.en.yml  model_config.js  pybuild.sh  pyproject.toml  releaseToPypi.sh
.github/workflows/: build-package.yml  generate-model-config.yml  gh-pages.yml  pre-commit.yml  release-package.yml  release-tag.yml
docs/: mkdocs.base.yml  mkdocs.en.yml  supported_models.md
docs/en/: about.md  api.md  architecture.md  best_deployment_practices.md  (+12 more)
en/: 404.html  api.html  api.md  architecture.html  best_deployment_practices.html  commands.html  commands.md  dify_integration.html  dify_integration.md  emd_client.html  emd_client.md  flowise_integration.html  flowise_integration.md  index.html  installation.html  installation.md  langchain_interface.html  langflow_integration.html  langflow_integration.md  local_deployment.html  local_deployment.md  nextchat_integration.html  nextchat_integration.md  ollama_integration.html  ollama_integration.md  openai_compatible.html  openai_compatible.md  print_page.html  sdk_api.html  sdk_api.md  sdk_integration.html  sdk_integration.md  search.html  sitemap.xml  supported_models.html  supported_models.md  swift_chat_integration.html  swift_chat_integration.md
images/: demo-install.avif
tests/: batch_deploy_test.py  create_stack_test.py  deploy_time_test.py  generate_model_config.py  generate_supported_models_doc_cli.py  local_image_test.ipynb  model_test.py  process_pool_test.py  test_quota_get.ipynb
(+346 files in other folders)
